--- a/legal/index.html
+++ b/legal/index.html
@@ -14,7 +14,7 @@
         content="Terms and Conditions for Creaty digital agency services. Learn about our policies, privacy, and intellectual property rights. Operated by Creativfolio Ltd in Mauritius.">
     <meta name="author" content="Creaty - Creativfolio Ltd">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://creaty.mu/legal">
+    <link rel="canonical" href="https://creatymu.org/legal">
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -267,14 +267,26 @@
 
         <!-- Cookie Banner -->
         <div id="cookie-banner" class="cookie-banner">
-            <h4>We Value Your Privacy</h4>
-            <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
-                consent to our use of cookies. <a href="/legal"
-                    style="color: var(--color-1); text-decoration: underline;">Learn more</a></p>
-            <div class="cookie-banner__buttons">
-                <button class="cookie-banner__btn cookie-banner__btn--accept" onclick="acceptCookies()">Accept</button>
-                <button class="cookie-banner__btn cookie-banner__btn--decline"
-                    onclick="closeCookieBanner()">Decline</button>
+            <div class="cookie-banner__icon-wrapper">
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M21.355 15.645a9 9 0 1 1-9-9c.343 0 .68.019 1.012.055a4.5 4.5 0 0 0 7.933 7.933c.036.332.055.669.055 1.012z"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                    <circle cx="9.5" cy="11.5" r="1" fill="currentColor" />
+                    <circle cx="12.5" cy="15.5" r="1" fill="currentColor" />
+                    <circle cx="15.5" cy="11.5" r="1" fill="currentColor" />
+                </svg>
+            </div>
+            <div class="cookie-banner__content">
+                <h4>We Value Your Privacy</h4>
+                <p>We use cookies to enhance your browsing experience and analyze our traffic. By clicking "Accept", you
+                    consent to our use of cookies. <a href="/legal" class="link-primary-underline">Learn more</a></p>
+                <div class="cookie-banner__buttons">
+                    <button class="cookie-banner__btn cookie-banner__btn--accept"
+                        onclick="acceptCookies()">Accept</button>
+                    <button class="cookie-banner__btn cookie-banner__btn--decline"
+                        onclick="closeCookieBanner()">Decline</button>
+                </div>
             </div>
         </div>
 
