--- a/legal/index.html
+++ b/legal/index.html
@@ -235,8 +235,8 @@
                     </div>
 
                     <p>
-                        Creaty is a premier agency in Mauritius specialized in Community Management and Graphic Design.
-                        We help businesses shine online.
+                        Behind every brand Mauritius loves is a strategy they never see. That's Creaty. We craft the
+                        design and community that turns browsers into believers.
                     </p>
                 </div>
 
@@ -252,7 +252,7 @@
 
                     <p class="s-footer__contact">
                         Do you have a question? Send us a word: <br>
-                        <a href="mailto:support@creaty.com" class="s-footer__mail-link">support@creaty.com</a>
+                        <a href="mailto:support@creaty.com" class="s-footer__mail-link">support@creatymu.org</a>
                     </p>
 
                     <div class="ss-copyright">
