--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta name="twitter:image" content="https://creatymu.org/images/og-image.png">
 
     <!-- Verification Codes -->
+    <meta name="yandex-verification" content="e0e59e8cc24a43e6" />
     <!-- Removed placeholders as per request -->
 
     <script>
