--- a/legal/index.html
+++ b/legal/index.html
@@ -31,6 +31,9 @@
     <meta name="twitter:description" content="Terms and Conditions for Creaty digital agency services.">
     <meta name="twitter:image" content="https://creatymu.org/images/og-image.png">
 
+    <!-- Verification Codes -->
+    <meta name="yandex-verification" content="e0e59e8cc24a43e6" />
+
     <!-- Schema.org Breadcrumb -->
     <script type="application/ld+json">
     {
