--- a/index.html
+++ b/index.html
@@ -59,14 +59,110 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="preload" href="css/styles.css" as="style">
+    <!-- Critical CSS
+    ================================================== -->
+    <style>
+        :root {
+            --font-sans: 'Inter', sans-serif;
+            --font-serif: 'Playfair Display', serif;
+            --font-heebo: 'Heebo', sans-serif;
+            --white: #ffffff;
+            --black: #000000;
+        }
+
+        html {
+            line-height: 1.15;
+            -webkit-text-size-adjust: 100%;
+            height: 100%;
+        }
+
+        body {
+            margin: 0;
+            font-family: var(--font-sans);
+            font-size: 1.8rem;
+            line-height: 1.667;
+            color: #555555;
+            background-color: var(--white);
+            height: 100%;
+        }
+
+        .s-intro {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            position: relative;
+            background-color: #111111;
+        }
+
+        .s-intro__bg {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url(/images/hero_creaty1.webp);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            fetchpriority: high;
+        }
+
+        .s-intro__content {
+            height: 100%;
+            align-items: center;
+            display: flex;
+            position: relative;
+            z-index: 2;
+        }
+
+        #preloader {
+            display: none !important;
+        }
+
+        .ss-preload {
+            overflow: visible !important;
+        }
+
+        .ss-show .s-header,
+        .ss-show .s-intro__content,
+        .ss-show .s-intro__scroll {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .s-header {
+            z-index: 100;
+            width: 100%;
+            height: 88px;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        .s-header__logo img {
+            width: 120px;
+            height: 30px;
+        }
+    </style>
+
+    <!-- Defer Non-Critical CSS
+    ================================================== -->
+    <link rel="preload" href="css/vendor.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="css/vendor.css">
+        <link rel="stylesheet" href="css/styles.css">
+    </noscript>
 
     <!-- favicons
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -75,10 +171,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="style"
-        href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap">
-    <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap"
-        rel="stylesheet">
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap"
+            rel="stylesheet">
+    </noscript>
     <meta name="theme-color" content="#ffffff">
 
 
@@ -244,6 +343,21 @@
         },
         "lastReviewed": "2026-01-01"
     }
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('consent', 'default', {
+            'analytics_storage': 'denied',
+            'ad_storage': 'denied'
+        });
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGEM349PX5"></script>
+    <script>
+        gtag('js', new Date());
+        gtag('config', 'G-SGEM349PX5');
     </script>
 
 </head>
