--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
                     <button class="cookie-banner__btn cookie-banner__btn--accept"
                         onclick="acceptCookies()">Accept</button>
                     <button class="cookie-banner__btn cookie-banner__btn--decline"
-                        onclick="closeCookieBanner()">Decline</button>
+                        onclick="declineCookies()">Decline</button>
                 </div>
             </div>
         </div>
