--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
-            fetchpriority: high;
         }
 
         .s-intro__content {
@@ -210,16 +209,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style"
-        href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <noscript>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap"
-            rel="stylesheet">
-    </noscript>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@1,400;1,700&display=swap">
     <meta name="theme-color" content="#ffffff">
 
 
@@ -387,19 +378,23 @@
     }
     </script>
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Google Tag Manager deferred loading -->
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('consent', 'default', {
-            'analytics_storage': 'denied',
-            'ad_storage': 'denied'
+        window.addEventListener('load', function () {
+            setTimeout(function () {
+                var script = document.createElement('script');
+                script.async = true;
+                script.src = "https://www.googletagmanager.com/gtag/js?id=G-SGEM349PX5";
+                document.head.appendChild(script);
+
+                script.onload = function () {
+                    window.dataLayer = window.dataLayer || [];
+                    function gtag() { dataLayer.push(arguments); }
+                    gtag('js', new Date());
+                    gtag('config', 'G-SGEM349PX5');
+                };
+            }, 2000);
         });
-    </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SGEM349PX5"></script>
-    <script>
-        gtag('js', new Date());
-        gtag('config', 'G-SGEM349PX5');
     </script>
 
 </head>
@@ -430,8 +425,8 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="/">
-                            <img src="/images/creaty.logo.svg" alt="Creaty - Digital Agency Mauritius" width="327"
-                                height="94">
+                            <img src="/images/creaty.logo.svg" alt="Creaty - Digital Agency Mauritius" width="120"
+                                height="34">
                         </a>
                     </div>
 
@@ -719,7 +714,7 @@
                         <div class="s-about__video-block">
                             <!-- Restored Dribbble video with fix for connection error (crossorigin and poster) -->
                             <video autoplay muted loop playsinline crossorigin="anonymous" class="s-about__video"
-                                preload="auto" poster="/images/hero_creaty1.webp">
+                                preload="auto" poster="/images/hero_creaty1.webp" width="1100" height="619">
                                 <source
                                     src="https://cdn.dribbble.com/userupload/46018280/file/116872959f12f4f187c89e2493674c71.mp4"
                                     type="video/mp4">
