--- a/legal/index.html
+++ b/legal/index.html
@@ -521,6 +521,7 @@
     ================================================== -->
         <script src="/js/plugins.js" defer></script>
         <script src="/js/config.js" defer></script>
+        <script src="/js/api-client.js" defer></script>
         <script src="/js/promo.js" defer></script>
         <script src="/js/main.js" defer></script>
 
