--- a/legal/index.html
+++ b/legal/index.html
@@ -176,15 +176,12 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="48x48" href="https://creatymu.org/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://creatymu.org/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://creatymu.org/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://creatymu.org/apple-touch-icon.png">
+    <link rel="shortcut icon" href="https://creatymu.org/favicon.ico">
+    <link rel="manifest" href="https://creatymu.org/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Google Tag Manager deferred loading -->
