--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
                         <span>© Creaty 2025 — Operated by <b>Creativfolio Ltd</b>, registered in Mauritius • <b>BRN:
                                 C25227739</b></span>
                         <span>Created by <a href="https://creativfolio.com/"
-                                title="Web Design & Branding Mauritius">Creativfolio</a></span>
+                                title="Web Design & Branding Mauritius">Création de Site Web & Portfolio</a></span>
                     </div>
                 </div>
 
