fix latest blog

--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
 
             <!-- news
             ----------------------------------------------- -->
-            <section id="news" class="s-news target-section">
+            <section id="news" class="s-news target-section" style="display: none;">
                 <div class="row section-header" data-num="05">
                     <div class="column lg-12 title-block">
                         <h2 class="title text-display-1">Latest News.</h2>
@@ -1201,7 +1201,8 @@
                     </div>
                 </div>
 
-                <div class="row block-lg-one-third block-tab-one-half block-stack" style="margin-top: 4rem;">
+                <div id="latest-news-grid" class="row block-lg-one-third block-tab-one-half block-stack"
+                    style="margin-top: 4rem;">
                     <div class="column">
                         <div class="news-preview" style="margin-bottom: 2rem;">
                             <h3 class="h5"><a href="/news">Community Management in 2025</a></h3>
@@ -1602,6 +1603,7 @@
         <script src="js/config.js" defer></script>
         <script src="js/api-client.js" defer></script>
         <script src="js/promo.js" defer></script>
+        <script src="js/news-home-loader.js" defer></script>
         <script src="js/main.js" defer></script>
 
         <script>
