--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#pricing" class="smoothscroll">Pricing</a></li>
                         <li><a href="#faq" class="smoothscroll">FAQ</a></li>
-                        <li><a href="#news" class="smoothscroll">News</a></li>
+                        <li><a href="/news" class="smoothscroll">News</a></li>
                         <li><a href="/legal" aria-label="Terms and Conditions">Terms & Conditions</a></li>
                     </ul>
                 </nav>
