--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#pricing" class="smoothscroll">Pricing</a></li>
                         <li><a href="#faq" class="smoothscroll">FAQ</a></li>
-                        <li><a href="/news" class="smoothscroll">News</a></li>
+                        <li><a href="/news">News</a></li>
                         <li><a href="/legal" aria-label="Terms and Conditions">Terms & Conditions</a></li>
                     </ul>
                 </nav>
@@ -1193,7 +1193,7 @@
 
             <!-- news
             ----------------------------------------------- -->
-            <section id="news" class="s-news target-section" style="display: none;">
+            <section id="latest-news" class="s-news target-section" style="display: none;">
                 <div class="row section-header" data-num="05">
                     <div class="column lg-12 title-block">
                         <h2 class="title text-display-1">Latest News.</h2>
