--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@
 
             <!-- news
             ----------------------------------------------- -->
-            <section id="latest-news" class="s-news target-section" style="display: none;">
+            <section id="latest-news" class="s-news target-section">
                 <div class="row section-header" data-num="05">
                     <div class="column lg-12 title-block">
                         <h2 class="title text-display-1">Latest News.</h2>
@@ -1541,7 +1541,7 @@
         </footer> <!-- end footer -->
 
         <!-- Cookie Banner -->
-        <div id="cookie-banner" class="cookie-banner">
+        <div id="cookie-banner" class="cookie-banner" style="display: none;">
             <div class="cookie-banner__icon-wrapper">
                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1" />
@@ -1566,7 +1566,7 @@
         </div>
 
         <!-- Promo Widget -->
-        <div id="promo-widget" class="promo-widget">
+        <div id="promo-widget" class="promo-widget" style="display: none;">
             <div class="promo-widget__close" onclick="minimizePromo()">
                 <svg viewBox="0 0 24 24">
                     <path
@@ -1589,13 +1589,13 @@
             <div class="promo-news">
                 <span class="promo-news__title">Latest News</span>
                 <div id="promo-news-container">
-                    <p class="text-loading">Loading latest updates...</p>
+                    <p style="font-size: 1.2rem; color: rgba(255,255,255,0.5);">Loading latest updates...</p>
                 </div>
             </div>
         </div>
 
         <!-- Promo Trigger Icon -->
-        <div id="promo-trigger" class="promo-trigger" onclick="showPromo()">
+        <div id="promo-trigger" class="promo-trigger" onclick="showPromo()" style="display: none;">
             <svg viewBox="0 0 24 24">
                 <path
                     d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z" />
@@ -1604,12 +1604,11 @@
 
         <!-- Java Script
     ================================================== -->
-        <script src="js/plugins.js" defer></script>
-        <script src="js/config.js" defer></script>
-        <script src="js/api-client.js" defer></script>
-        <script src="js/promo.js" defer></script>
-        <script src="js/news-home-loader.js" defer></script>
-        <script src="js/main.js" defer></script>
+        <script src="/js/plugins.js" defer></script>
+        <script src="/js/config.js" defer></script>
+        <script src="/js/api-client.js" defer></script>
+        <script src="/js/promo.js" defer></script>
+        <script src="/js/main.js" defer></script>
 
         <script>
             document.addEventListener('DOMContentLoaded', () => {
