--- a/legal/index.html
+++ b/legal/index.html
@@ -341,6 +341,31 @@
         ================================================== -->
         <footer id="colophon" class="s-footer footer">
 
+            <div class="row s-footer__top">
+                <div class="column lg-12 text-center">
+                    <h2 class="text-display-1">
+                        Sign Up to Our Newsletter.
+                    </h2>
+                    <p class="lead">
+                        Subscribe for updates, special offers and more.
+                    </p>
+                </div>
+                <div class="column lg-12 s-footer__subscribe">
+                    <div class="subscribe-form">
+                        <form id="mc-form" class="mc-form">
+                            <input type="email" name="EMAIL" id="mce-EMAIL" class="u-fullwidth text-center"
+                                placeholder="Your Email Address"
+                                title="The domain portion of the email address is invalid (the portion after the @)."
+                                pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$"
+                                required>
+                            <input type="submit" name="subscribe" value="Subscribe"
+                                class="btn btn--primary u-fullwidth">
+                            <div class="mc-status"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
             <div class="row s-footer__bottom">
                 <div class="column lg-5 md-6 stack-on-900">
                     <div class="footer__logo">
