make robuste seo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <link rel="canonical" href="https://creatymu.org/">
 
+    <!-- Hreflang for International SEO -->
+    <link rel="alternate" hreflang="en" href="https://creatymu.org/">
+    <link rel="alternate" hreflang="x-default" href="https://creatymu.org/">
+
     <!-- Geo Meta for Local SEO -->
     <meta name="geo.region" content="MU">
     <meta name="geo.placename" content="Port Louis">
@@ -31,11 +35,15 @@
     <meta property="og:description"
         content="Transform your digital presence with Creaty. Professional Community Management & Graphic Design in Mauritius.">
     <meta property="og:image" content="https://creatymu.org/images/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:locale" content="en_MU">
     <meta property="og:site_name" content="Creaty">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@creatymu">
+    <meta name="twitter:creator" content="@creatymu">
     <meta name="twitter:title" content="Creaty - Digital Agency Mauritius">
     <meta name="twitter:description" content="Professional Community Management & Graphic Design in Mauritius">
     <meta name="twitter:image" content="https://creatymu.org/images/og-image.png">
@@ -206,6 +214,7 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
