--- a/legal/index.html
+++ b/legal/index.html
@@ -14,7 +14,11 @@
         content="Terms and Conditions for Creaty digital agency services. Learn about our policies, privacy, and intellectual property rights. Operated by Creativfolio Ltd in Mauritius.">
     <meta name="author" content="Creaty - Creativfolio Ltd">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
-    <link rel="canonical" href="https://creatymu.org/legal">
+    <link rel="canonical" href="https://creatymu.org/legal/">
+
+    <!-- Hreflang for International SEO -->
+    <link rel="alternate" hreflang="en" href="https://creatymu.org/legal/">
+    <link rel="alternate" hreflang="x-default" href="https://creatymu.org/legal/">
 
     <!-- OpenGraph / Facebook -->
     <meta property="og:type" content="website">
@@ -27,6 +31,8 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@creatymu">
+    <meta name="twitter:creator" content="@creatymu">
     <meta name="twitter:title" content="Terms & Conditions | Creaty">
     <meta name="twitter:description" content="Terms and Conditions for Creaty digital agency services.">
     <meta name="twitter:image" content="https://creatymu.org/images/og-image.png">
@@ -182,6 +188,7 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
